# GridPaint

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/: plpdocument.cpp  plpdocument.h  plplayer.cpp  plplayer.h  plppen.cpp  plppen.h  plppenmanager.cpp  plppenmanager.h  plpsettings.cpp  plpsettings.h
ui/: plpcanvas.cpp  plpcanvas.h  plpcolorform.cpp  plpcolorform.h  plpcolorform.ui  plplayerform.cpp  plplayerform.h  plplayerform.ui
ui/dialog/: plppeneditingdialog.cpp  plppeneditingdialog.h  plppeneditingdialog.ui
ui/utils/: plplayeritem.cpp  plplayeritem.h
